update files structure